--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-showdown": "^2.3.1",
     "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
