--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,11 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown": "^7.1.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "react-showdown": "^2.3.1",
+    "react-scripts": "^5.0.0",
+    "react-syntax-highlighter": "^15.4.5",
     "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
