--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "^5.0.0",
     "react-syntax-highlighter": "^15.4.5",
     "redux": "^4.1.2",
+    "remark-gfm": "^3.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
